site/css/styles.css
body{
    font-family: minion-pro-caption, verdana, serif;
    background-color: #232423;
    color: #eeeeee;
    background-image: -webkit-linear-gradient(left, rgba(255, 255, 255, .05) 5%, transparent 5%, transparent);
    background-image: -moz-linear-gradient(to right, rgba(255, 255, 255, .05) 5%, transparent 5%, transparent);
    background-image: -o-linear-gradient(to right, rgba(255, 255, 255, .05) 5%, transparent 5%, transparent);
    background-image: linear-gradient(to right, rgba(255, 255, 255, .05) 5%, transparent 5%, transparent);
    background-size: 15px 15px;
}

.clear{
    clear: both;
}

section h3{
    text-align: center;
    font-size: 1.125em;
    margin-bottom: 1.5em;
    color: #DEC83A;
}

.middle{
    width: 100%;
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
}

a{
    color: #4591F5;
    text-decoration: none;
}

.emphasis{
    color: #DEC83A;
}

h1, header h2, section h3{
    font-family: trajan-pro-3, verdana, serif;
}


/*******************************
 header styling
 */
header{
    text-align: center;
    padding: 1em 0;
}

h1{
    font-size: 3em;
    letter-spacing: .2em;
}

header h2{
    font-size: 1.33333em;
    margin-top: .25em;
}

/*
 end header styling
*******************************/


/******************************
phone
*/
.phone a{
    font-size: 2em;
}
.phone{
    background-color: #232423;
    text-align: center;
    box-shadow: 0 0 .35em #DEC83A;
    max-width: 100%;
    color: #DEC83A;
    padding-top: 1em;
    padding-bottom: 1em;
}
/*
end phone
******************************/

/******************************
yelp
*/

.yelp{
    margin: 3em 0;
}

.yelp p{
    font-family: trajan-pro-3, verdana, serif;
    font-size: 1.125em;
    line-height: 1.34em;
    width: 14em;
    margin: 0 auto;
}

.yelp img{
    float: left;
    width: 3em;
    margin-right: .5em;
}
/*
end yelp
******************************/


/******************************
fleet
*/

.fleet{
    padding-bottom: 1em;
    margin-bottom: 0;
}

.fleet li{
    margin-top: 3em;
}

.fleet figcaption, .fleet p{
    text-align: center;
}
.fleet figcaption{
    margin-top: .75em;
}

/*circles*/
.fleet li .wrapper{
    margin: 0 auto; /*center the images*/
    width: 175px;
    height: 175px;
    overflow: hidden;
    border-radius: 50%;
    border: 1px solid #eeeeee;
    background-color: white;
}
.fleet li img{
    width: 150px;
    margin-top: 30px;
    margin-left: 10px;
}
/*
end fleet
******************************/


/******************************
services
*/

.services ul li, .services p{
    margin-left: 3em;
}

.services li{
    margin-bottom: 1em;
    font-size: 1.333em;
}

.services li:before{
    content: "\00BB \0020";
}

.services p{
    padding-top: 1em;
}

/*
end services
******************************/


/******************************
testimonials
*/

.testimonials{
    margin-top: 3em;
}

.testimonials li{
    margin-bottom: 3em;
}

.testimonials li p{
    line-height: 1.4375em;
    padding: 0 2em;
    text-align: justify;
}

.curlystart{
    font-size: 8em;
    height: 1px;
    /*put the quotes exactly where we want them.*/
    margin-top: 44px;
    float: left;
}
/*
end testimonials
******************************/


@media screen and (min-width: 660px){

    /*
      make the top section black and gold.
      add a box shadow
      */
    .top{
        background-color: #232423;
        margin-bottom: 3em;
        box-shadow: 0 0 .35em #DEC83A;
    }

    .middle{
        /*let the middle grow to accomodate two columns.*/
        max-width: 900px;
        margin-top: 3em;
        padding-bottom: 2em;
    }

    /*it's folded into the top section now.*/
    .phone{
        box-shadow: none;
        padding-top: 0;
        padding-bottom: 1em;
    }

    header h1{
        color: #DEC83A;
    }

    .services{
        width: 28%;/*fallback*/
        width: calc(33% - 2em);
        max-width: 300px;
        margin-right: 2em;
    }

    /*make the font smaller so the text doesn't wrap*/
    .services h3, .services li, .services p{
        font-size: .8333em;
    }

    /*lines up better this way.*/
    .services h3{
        text-align: left;
    }

    /*cancel the left margin*/
    .services ul li, .services p{
        margin-left: 0;
    }

    .testimonials, .services{
        margin-top: 0;
    }

    /*it's wider, so tweak the line-height*/
    .testimonials li p{
        line-height: 1.5625em;
    }

    /* looks redundant on larger screens*/
    .testimonials li p.emphasis{
        display: none;
    }

    .testimonials h3{
        text-align: left;
        margin-bottom: 1em;
        margin-left: 5em;
    }

    /*make the curlies hang off to the left.*/
    .curlystart{
        margin: 3rem 1rem 6rem 0;
        line-height: 1rem;
    }

    .testimonials{
        width: 66%;
        max-width: 600px;
        float: left;
    }

    .yelp{
        font-size: 1.333em;
        margin: 0;
    }

    .yelp p{
        margin: 0 auto;
    }

    .services{
        float: right;
    }

    .fleet{
        padding-top: 3em;
        background-color: #232423;
        box-shadow: 0 0 .35em #DEC83A;
    }

}

@media screen and (min-width: 750px){
    /* 
       boost the font size once the screen is wide enough
       to avoid line breaks.
    */
    .services h3, .services li{
        font-size: 1em;
    }
}

